@@ -118,7 +118,7 @@
         <log4j.version>2.17.2</log4j.version>
         <junit.version>4.12</junit.version>
         <hamcrest.version>1.3</hamcrest.version>
-        <mockito.version>2.7.22</mockito.version>
+        <mockito.version>4.11.0</mockito.version>
         <mathjax.version>2.7.0</mathjax.version>
         <spring.version>5.3.39</spring.version>
         <spring-security.version>5.8.9</spring-security.version>
@@ -167,7 +167,7 @@
        <httpclient.version>4.5.13</httpclient.version> <!--  5.4-alpha1 4.5.3-->
         <!-- Sonar -->
         <sonar-maven-plugin.version>3.9.1.2184</sonar-maven-plugin.version>
-        <sonar-jacoco-plugin.version>0.8.7</sonar-jacoco-plugin.version>
+        <sonar-jacoco-plugin.version>0.8.11</sonar-jacoco-plugin.version>
         <!-- Haelcast -->
         <hazelcast.version>5.3.6</hazelcast.version>
         <!-- Default authentication -->
@@ -717,6 +717,23 @@
                             <include>**/*Tests.java</include>
                             <include>**/*Test_IT.java</include>
                         </includes>
+                        <argLine>
+                            --add-opens java.base/java.lang=ALL-UNNAMED
+                            --add-opens java.base/java.util=ALL-UNNAMED
+                            --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+                            --add-opens java.base/java.text=ALL-UNNAMED
+                            --add-opens java.desktop/java.awt.font=ALL-UNNAMED
+                            --add-opens java.base/jdk.internal.reflect=ALL-UNNAMED
+                            --add-opens java.base/java.lang.invoke=ALL-UNNAMED
+                            --add-opens java.base/java.security=ALL-UNNAMED
+                            --add-opens java.base/java.net=ALL-UNNAMED
+                            --add-opens java.base/java.io=ALL-UNNAMED
+                            --add-opens java.base/sun.nio.ch=ALL-UNNAMED
+                            --add-opens java.base/sun.security.util=ALL-UNNAMED
+                        </argLine>
+                        <systemPropertyVariables>
+                            <powermock.classloading>javagent</powermock.classloading>
+                        </systemPropertyVariables>
                     </configuration>
                     <dependencies>
                         <dependency>
